2010-08-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/keybindings.h, src/prefs.c, src/plugindata.h:
   Use single binding_ids keybinding array instead of individual
   arrays for core keybindings. This allows the keybinding IDs to be
   merged into one enum; the order of keybindings is now just the
   order they are added to each group. Keybindings can be reordered
   without breaking the plugin ABI but groups must stay the same.
 * src/stash.c:
   Fix writing the default value when a key is missing for hidden
   prefs, even if it was overridden when it was originally read.
 * src/keyfile.c, src/ui_utils.c, doc/geany.txt, doc/geany.html:
   Move some interface hidden prefs to ui_utils.c.
 * src/editor.c:
   Revert r4840 scope completion mode as it sometimes breaks
   autocompletion.
 * src/keybindings.h, src/plugindata.h:
   Randomly sort keybinding IDs to show there should be no order.
 * src/keybindings.c:
   Reorder Focus keybindings.


2010-08-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c, src/ui_utils.h:
   Make ui_label_new_bold() a function.
   Escape the name of the current document for markup when using
   document name for menu items (closes #3038844).
 * src/vte.c:
   Inherit 'beep on errors' preference for the audible bell preference
   for the VTE (closes #3038215).


2010-08-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/utils.c, src/utils.h:
   Add utils_get_eol_char().
 * plugins/geanyfunctions.h, src/document.c, src/editor.c, src/editor.h,
   src/plugindata.h, src/plugins.c, src/templates.c, src/utils.c,
   src/utils.h:
   Ensure inserted templates always have proper line ending characters
   according to the current document's preference.
   This is also fixes problems with templates on Windows which had
   always Unix line ending characters but now since they are read
   from files, these have Windows line ending characters and had been
   converted twice.

